src/objects/LAC_Farm__c.object
<CustomObject>
    <fields>
        <fullName>Area_Unit__c</fullName>
        <label>Area Unit</label>
        <picklist>
            <picklistValues>
                <fullName>Ha</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manzanas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuerdas (40x40)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuerdas (25x25)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuadras</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <label>Area</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Banana_area__c</fullName>
        <label>Banana area</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CertBanano__c</fullName>
        <label>CertBanano</label>
        <picklist>
            <picklistValues>
                <fullName>Utz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fairtrade International</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fairtrade USA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rainforest Alliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Gap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Organico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ninguno</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>CertCacao__c</fullName>
        <label>CertCacao</label>
        <picklist>
            <picklistValues>
                <fullName>Utz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fairtrade International</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fairtrade USA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rainforest Alliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Gap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Organico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cacao Practices (Starbucks)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ninguno</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>CertCafe__c</fullName>
        <label>CertCafe</label>
        <picklist>
            <picklistValues>
                <fullName>Utz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fairtrade International</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fairtrade USA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rainforest Alliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Gap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cafe Practices (Starbucks)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Organico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ninguno</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>CertHoney__c</fullName>
        <label>CertHoney</label>
        <picklist>
            <picklistValues>
                <fullName>Utz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fairtrade International</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fairtrade USA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rainforest Alliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Gap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Organico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ninguno</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>CertHorticulture__c</fullName>
        <label>CertHorticulture</label>
        <picklist>
            <picklistValues>
                <fullName>Utz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fairtrade International</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fairtrade USA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rainforest Alliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Gap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Organico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ninguno</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>CertPlantano__c</fullName>
        <label>CertPlantano</label>
        <picklist>
            <picklistValues>
                <fullName>Utz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fairtrade International</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fairtrade USA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rainforest Alliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Gap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Organico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ninguno</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Certifications__c</fullName>
        <label>Certifications</label>
        <picklist>
            <picklistValues>
                <fullName>FLO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rainforest Alliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UTZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ninguna</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Cocoa_area__c</fullName>
        <label>Cocoa area</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Coffee_area__c</fullName>
        <label>Coffee area</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Crops__c</fullName>
        <label>Crops</label>
        <picklist>
            <picklistValues>
                <fullName>Cacao</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banano</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platano</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cafe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miel de abejas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hortalizas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Palma</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <picklist>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <label>District</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Farm_Code__c</fullName>
        <label>Farm Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Farm_Name__c</fullName>
        <label>Farm Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Farm_Number__c</fullName>
        <label>Farm Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GPS_Data__c</fullName>
        <description>Raw GPS Data from mapped survey. Includes Lat, Lng, Altitude and Accuracy</description>
        <label>GPS Data</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GeoCode__c</fullName>
        <label>GeoCode</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Honeycomb_number__c</fullName>
        <label>Honeycomb number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Horticulture_area__c</fullName>
        <label>Horticulture area</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAC_Farmer_Id_Temp__c</fullName>
        <description>Deprecated: July 2013 - This field isn&apos;t needed since TaroWorks now supports related object mapping.</description>
        <label>LAC Farmer Id Temp</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAC_Household__c</fullName>
        <label>LAC Household</label>
        <referenceTo>LAC_Household__c</referenceTo>
        <relationshipLabel>LAC Farms</relationshipLabel>
        <relationshipName>LAC_Farms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Livestock__c</fullName>
        <label>Livestock</label>
        <picklist>
            <picklistValues>
                <fullName>Bovino</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aves</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cerdos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cabras</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Peces</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otro</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>LoanAmount__c</fullName>
        <label>LoanAmount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LoanDisaster__c</fullName>
        <label>LoanDisaster</label>
        <picklist>
            <picklistValues>
                <fullName>Desastre natural</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expansion de area de cultivo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otro</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LoanTerm__c</fullName>
        <label>LoanTerm</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LoanUse__c</fullName>
        <label>LoanUse</label>
        <picklist>
            <picklistValues>
                <fullName>Compra de insumos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compra de equipos y/o maquinaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pago de mano de obra o jornales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nuevas plantaciones</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drenajes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compra de bienes para el hogar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Educacion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otro</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>LoanVendor__c</fullName>
        <label>LoanVendor</label>
        <picklist>
            <picklistValues>
                <fullName>Banco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cooperativa o asociacion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prestamista</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Familia/Amigos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otro</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MainFruit__c</fullName>
        <label>MainFruit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Municipality__c</fullName>
        <label>Municipality</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OtherCertBanano__c</fullName>
        <label>OtherCertBanano</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherCertCacao__c</fullName>
        <label>OtherCertCacao</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherCertCafe__c</fullName>
        <label>OtherCertCafe</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherCertHoney__c</fullName>
        <label>OtherCertHoney</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherCertHorticulture__c</fullName>
        <label>OtherCertHorticulture</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherCertPlantano__c</fullName>
        <label>OtherCertPlantano</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Crops__c</fullName>
        <label>Other Crops</label>
        <picklist>
            <picklistValues>
                <fullName>Arroz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Frijol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repollo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maiz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zanahoria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Frutales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Berenjena</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cebolla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pepino</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pimenton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tomate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aji</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yuca</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Papa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Espinaca</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ajo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lechuga</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No siembre cultivo aparte del principal</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Palm_area__c</fullName>
        <label>Palm area</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plantain_area__c</fullName>
        <label>Plantain area</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProcCertBananao__c</fullName>
        <label>ProcCertBananao</label>
        <picklist>
            <picklistValues>
                <fullName>Utz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fairtrade International</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fairtrade USA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rainforest Alliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Gap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Organico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ninguno</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>ProcCertCacao__c</fullName>
        <label>ProcCertCacao</label>
        <picklist>
            <picklistValues>
                <fullName>Utz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fairtrade International</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fairtrade USA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rainforest Alliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Gap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Organico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cacao Practices (Starbucks)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ninguno</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>ProcCertCafe__c</fullName>
        <label>ProcCertCafe</label>
        <picklist>
            <picklistValues>
                <fullName>Utz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fairtrade International</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fairtrade USA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rainforest Alliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Gap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cafe Practices (Starbucks)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Organico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ninguno</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>ProcCertHoney__c</fullName>
        <label>ProcCertHoney</label>
        <picklist>
            <picklistValues>
                <fullName>Utz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fairtrade International</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fairtrade USA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rainforest Alliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Gap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Organico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ninguno</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>ProcCertHorticulture__c</fullName>
        <label>ProcCertHorticulture</label>
        <picklist>
            <picklistValues>
                <fullName>Utz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fairtrade International</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fairtrade USA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rainforest Alliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Gap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Organico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ninguno</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>ProcCertPlatano__c</fullName>
        <label>ProcCertPlatano</label>
        <picklist>
            <picklistValues>
                <fullName>Utz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fairtrade International</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fairtrade USA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rainforest Alliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Gap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Organico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ninguno</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Tenancy__c</fullName>
        <label>Type of Tenancy</label>
        <picklist>
            <picklistValues>
                <fullName>Propia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arrendada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comodato</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invasion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otra</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Zone__c</fullName>
        <label>Zone</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>LAC Farm</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>LAC_Household__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>LAC Farm Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LAC Farms</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>